2002-12-13  Pavel Roskin  <proski@gnu.org>

	* extfs/uha.in (mchafs_list): Don't parse the month, use
	DD-MM-YYYY output.
	(mchafs_copyout): Use cat, not mv, because the files can be on
	different filesystems.  Use "q" and don't suppress stderr.

	* extfs/ulha.in: Don't suppress stderr.

	* extfs/uzoo.in: Always use "q" option to avoid processing junk.
	Always create symlink, do it in a safer directory.

	* extfs/uarj.in: New script working with open-source ARJ.
	Contributed by Viatcheslav Odintsov.
	* extfs/uarj: Remove.
	* extfs/hp48: Rename to ...
	* extfs/hp48.in: ... this.  It needs awk substitution.
	* extfs/Makefile.am: Adjust for the above.

	* extfs/ulha.in: Strengthen quoting.

	* extfs/uha.in: Strengthen quoting.  Remove unnecessary space
	after filename.  Update URL.  Use safer temporary directory.

	* extfs/uarj: New list-only implementation that doesn't need
	patched unarj.
	* extfs/unarj.diff: Remove.
	* extfs/Makefile.am: Remove extfs/unarj.diff.

2002-12-13  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs.in: "copyin" method added (with compressed files
	support).  Files inside archive now have '.diff' extension.
	Temporary file not needed any more.  Proper handling of
	"/dev/null" filenames, filename heuristics based on diff info
	page.  Set files owner and group as the archive.
	* extfs/audio.in: CDDB_TIMEOUT variable added.

2002-12-12  Pavel Roskin  <proski@gnu.org>

	* vfs.c (is_dos_date): Allow 4-digit years.
	(vfs_parse_filedate): Don't limit length of the year field for
	DOS dates, subtract 1900 if necessary.

	* extfs/apt.in: Fix Y2K bug.
	* extfs/deba.in: Likewise.
	* extfs/debd.in: Likewise.
	* extfs/dpkg.in: Likewise.
	Reported by Adam Byrtek <alpha@debian.org>

	* extfs/patchfs.in: Print 4-digit year.  If str2time is not
	available, use current time, not 0.

2002-12-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/urar.in: rar lists directories after files, so sort "list"
	command output by names to prevent duplications.
